--- a/templates.yaml
+++ b/templates.yaml
@@ -1,8 +1,8 @@
 welcome: Welcome to memory game. I'm going to say three numbers for you to repeat backwards. Ready?
 
-round: Can you repeat the numbers {{ numbers|join(", ") }} backwards?
+round: Can you repeat the numbers {{ numbers|join(", ") }}, backwards?
 
-win: Good job!
+win: Good job! You must be part elephant.
 
 lose: Sorry, that's the wrong answer.
 
